# openmeeg

./: CMakeLists.txt  Dockerfile
OpenMEEG/include/: analytics.h  assemble.h  operators.h
OpenMEEG/src/: assembleSourceMat.cpp  operators.cpp
apps/: assemble.cpp
